# netlistx-rs

./: AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  GEMINI.md  README.md  cd.bak  clippy.toml  justfile  rustfmt.toml
.cargo/: config.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: ci.yml
benches/: netlist_bench.rs  netlist_benchmark.rs
examples/: basic_usage.rs  builder_pattern.rs  partitioning_example.rs
src/: cover.rs  factory.rs  graph_algo.rs  graph_cover.rs  hadlock.rs  io.rs  lib.rs  netlist.rs  netlist_algo.rs  partitioning.rs  rand_cover.rs  rand_cover_gpu.rs  statistics.rs  trigonom.rs  tsp.rs
tests/: integration_tests.rs  python_port_tests.rs
