[package]
name = "netlistx-rs"
version = "0.1.1"
edition = "2021"
description = "Netlist (hypergraph) in Rust"
repository = "https://github.com/luk036/netlistx-rs"
license = "MIT OR Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dev-dependencies]
fractions-rs = "0.1.2"
num-rational = "0.4.2"
