[package]
name = "netlistx-rs"
version = "0.1.2"
edition = "2021"
description = "Netlist (hypergraph) in Rust"
repository = "https://github.com/luk036/netlistx-rs"
license = "MIT OR Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
petgraph = "0.8.3"

[dev-dependencies]
fractions-rs = "0.1.5"
num-rational = "0.4.2"
